--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
 
   cupertino_icons: ^0.1.3
   flutter_barcode_scanner: ^1.0.1
+  geolocator: ^5.1.5
 
 dev_dependencies:
   flutter_test:
